--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48965,6 +48965,7 @@ server=/jr-soft.com/114.114.114.114
 server=/jr123.com/114.114.114.114
 server=/jr18.com/114.114.114.114
 server=/jravity.com/114.114.114.114
+server=/jrbobbin.com/114.114.114.114
 server=/jrdaimao.com/114.114.114.114
 server=/jrexam.com/114.114.114.114
 server=/jrfcg.com/114.114.114.114
