accelerated-domains: add liliangji.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54045,6 +54045,7 @@ server=/likingfit.com/114.114.114.114
 server=/likuli.com/114.114.114.114
 server=/likuso.com/114.114.114.114
 server=/lili.cc/114.114.114.114
+server=/liliangji.com/114.114.114.114
 server=/liliangwl.com/114.114.114.114
 server=/lilin-electric.com/114.114.114.114
 server=/lilinwei.com/114.114.114.114
