--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76502,6 +76502,7 @@ server=/szltwl.com/114.114.114.114
 server=/szltwlw.com/114.114.114.114
 server=/szluxon.com/114.114.114.114
 server=/szlvbarcode.com/114.114.114.114
+server=/szlwbj.com/114.114.114.114
 server=/szlwtech.com/114.114.114.114
 server=/szlxl100.com/114.114.114.114
 server=/szlygc.com/114.114.114.114
