accelerated-domains: add metaoptronics.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57817,6 +57817,7 @@ server=/metal.com/114.114.114.114
 server=/metalchina.com/114.114.114.114
 server=/metaluxuryagent.com/114.114.114.114
 server=/metalyoung.com/114.114.114.114
+server=/metaoptronics.com/114.114.114.114
 server=/metaplanet3023.com/114.114.114.114
 server=/metasecurities.com/114.114.114.114
 server=/metastonecorp.com/114.114.114.114
