--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76352,6 +76352,7 @@ server=/szeholiday.com/114.114.114.114
 server=/szelanpo.com/114.114.114.114
 server=/szelight.com/114.114.114.114
 server=/szesens.com/114.114.114.114
+server=/szeverich.com/114.114.114.114
 server=/szfa.com/114.114.114.114
 server=/szfachina.org/114.114.114.114
 server=/szfangzhouhd.com/114.114.114.114
