--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89769,6 +89769,7 @@ server=/xuezhouyi.com/114.114.114.114
 server=/xuezizhai.com/114.114.114.114
 server=/xugaoyang.com/114.114.114.114
 server=/xugt.com/114.114.114.114
+server=/xuguang.net/114.114.114.114
 server=/xuguangwangluo.com/114.114.114.114
 server=/xugucn.com/114.114.114.114
 server=/xuhaijun.pw/114.114.114.114
