--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76371,6 +76371,7 @@ server=/szfutong.com/114.114.114.114
 server=/szfw.org/114.114.114.114
 server=/szfwzl.com/114.114.114.114
 server=/szfx.com/114.114.114.114
+server=/szfxdev.com/114.114.114.114
 server=/szfyhd.com/114.114.114.114
 server=/szfyzb.com/114.114.114.114
 server=/szgalaxy.com/114.114.114.114
