accelerated-domains: add gssag.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34470,6 +34470,7 @@ server=/gsqstudio.com/114.114.114.114
 server=/gsrcu.com/114.114.114.114
 server=/gsrecv.com/114.114.114.114
 server=/gsrl.net/114.114.114.114
+server=/gssag.com/114.114.114.114
 server=/gssbh.com/114.114.114.114
 server=/gssdlv.com/114.114.114.114
 server=/gsseo.net/114.114.114.114
