--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75667,6 +75667,7 @@ server=/sursenelec.com/114.114.114.114
 server=/sursung.com/114.114.114.114
 server=/surtime.com/114.114.114.114
 server=/suruicloud.com/114.114.114.114
+server=/surun-tech.com/114.114.114.114
 server=/survey.work/114.114.114.114
 server=/surveyhills.com/114.114.114.114
 server=/surveyrtk.com/114.114.114.114
