--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80718,6 +80718,7 @@ server=/uishijie.com/114.114.114.114
 server=/uisnetwork.com/114.114.114.114
 server=/uisrc.com/114.114.114.114
 server=/uiste.com/114.114.114.114
+server=/uit-sz.com/114.114.114.114
 server=/uitab.com/114.114.114.114
 server=/uitool.net/114.114.114.114
 server=/uiu.cc/114.114.114.114
