accelerated-domains: add nanomicro.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60342,6 +60342,7 @@ server=/nanobody-biolab.com/114.114.114.114
 server=/nanochrom.com/114.114.114.114
 server=/nanoeast.net/114.114.114.114
 server=/nanoer.net/114.114.114.114
+server=/nanomicro.com/114.114.114.114
 server=/nanomxenes.com/114.114.114.114
 server=/nanpowan.com/114.114.114.114
 server=/nanpu.vip/114.114.114.114
