--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76216,6 +76216,7 @@ server=/sz-ekl.com/114.114.114.114
 server=/sz-etong.com/114.114.114.114
 server=/sz-gaokai.com/114.114.114.114
 server=/sz-hdenergy.com/114.114.114.114
+server=/sz-hiragawa.com/114.114.114.114
 server=/sz-huashi.com/114.114.114.114
 server=/sz-huayuan.com/114.114.114.114
 server=/sz-hyauto.com/114.114.114.114
