--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80566,6 +80566,7 @@ server=/udache.com/114.114.114.114
 server=/udalogistic.com/114.114.114.114
 server=/udamall.com/114.114.114.114
 server=/udangjia.com/114.114.114.114
+server=/udasauto.com/114.114.114.114
 server=/udashi.com/114.114.114.114
 server=/udbac.com/114.114.114.114
 server=/uddtrip.com/114.114.114.114
