accelerated-domains: add yslpaint.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93497,6 +93497,7 @@ server=/yskxjy.com/114.114.114.114
 server=/yslcw.com/114.114.114.114
 server=/ysljmw.com/114.114.114.114
 server=/ysljnkj.com/114.114.114.114
+server=/yslpaint.com/114.114.114.114
 server=/yslqo.com/114.114.114.114
 server=/yslw.com/114.114.114.114
 server=/ysmiji.com/114.114.114.114
