accelerated-domains: add catugbio.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17259,6 +17259,7 @@ server=/cato-travel.com/114.114.114.114
 server=/catofes.com/114.114.114.114
 server=/cattsoft.com/114.114.114.114
 server=/cattsp.com/114.114.114.114
+server=/catugbio.com/114.114.114.114
 server=/cature.com/114.114.114.114
 server=/catv.net/114.114.114.114
 server=/catv114.com/114.114.114.114
