accelerated-domains: add shengdecw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71893,6 +71893,7 @@ server=/shengchan.biz/114.114.114.114
 server=/shengdan.com/114.114.114.114
 server=/shengdaosoft.com/114.114.114.114
 server=/shengdaprint.com/114.114.114.114
+server=/shengdecw.com/114.114.114.114
 server=/shengdianhuadg.com/114.114.114.114
 server=/shengdianhuadk.com/114.114.114.114
 server=/shengejing.com/114.114.114.114
