accelerated-domains: add anjiecorp.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11060,6 +11060,7 @@ server=/anjian.com/114.114.114.114
 server=/anjianghu.net/114.114.114.114
 server=/anjiangshi.com/114.114.114.114
 server=/anjiechem.com/114.114.114.114
+server=/anjiecorp.com/114.114.114.114
 server=/anjimicro.com/114.114.114.114
 server=/anjismart.com/114.114.114.114
 server=/anjixue.com/114.114.114.114
