--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9092,6 +9092,7 @@ server=/abcys8.com/114.114.114.114
 server=/abd007.com/114.114.114.114
 server=/abddn.com/114.114.114.114
 server=/abdstem.com/114.114.114.114
+server=/abe-sz.com/114.114.114.114
 server=/abe-tech.com/114.114.114.114
 server=/abeacon.com/114.114.114.114
 server=/abeij.com/114.114.114.114
