--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76312,6 +76312,7 @@ server=/szcfyi.com/114.114.114.114
 server=/szchengli.com/114.114.114.114
 server=/szchengyue.com/114.114.114.114
 server=/szclbxf.com/114.114.114.114
+server=/szcleanair.com/114.114.114.114
 server=/szclxzx.com/114.114.114.114
 server=/szcno.com/114.114.114.114
 server=/szcogo.com/114.114.114.114
