accelerated-domains: add sz-iso.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76227,6 +76227,7 @@ server=/sz-huashi.com/114.114.114.114
 server=/sz-huayuan.com/114.114.114.114
 server=/sz-hyauto.com/114.114.114.114
 server=/sz-hzt.com/114.114.114.114
+server=/sz-iso.com/114.114.114.114
 server=/sz-jiahong.com/114.114.114.114
 server=/sz-jlc.com/114.114.114.114
 server=/sz-kaito.com/114.114.114.114
