--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76363,6 +76363,7 @@ server=/szedu.net/114.114.114.114
 server=/szeeg.com/114.114.114.114
 server=/szegddc.com/114.114.114.114
 server=/szeholiday.com/114.114.114.114
+server=/szelab.com/114.114.114.114
 server=/szelanpo.com/114.114.114.114
 server=/szelight.com/114.114.114.114
 server=/szesens.com/114.114.114.114
