accelerated-domains: add szfuture.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76383,6 +76383,7 @@ server=/szfolo.com/114.114.114.114
 server=/szforter.com/114.114.114.114
 server=/szfty.net/114.114.114.114
 server=/szfutong.com/114.114.114.114
+server=/szfuture.com/114.114.114.114
 server=/szfw.org/114.114.114.114
 server=/szfwzl.com/114.114.114.114
 server=/szfx.com/114.114.114.114
