--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76704,6 +76704,7 @@ server=/szwstui.com/114.114.114.114
 server=/szwtsd.com/114.114.114.114
 server=/szwuyukeji.com/114.114.114.114
 server=/szwwco.com/114.114.114.114
+server=/szx-ray.com/114.114.114.114
 server=/szxbbus.com/114.114.114.114
 server=/szxbyx.com/114.114.114.114
 server=/szxcxkf.com/114.114.114.114
