--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81229,6 +81229,7 @@ server=/utan.com/114.114.114.114
 server=/utanbaby.com/114.114.114.114
 server=/utbon.com/114.114.114.114
 server=/utc-ic.com/114.114.114.114
+server=/utec.cc/114.114.114.114
 server=/utecbj.com/114.114.114.114
 server=/utecexpress.com/114.114.114.114
 server=/utepo.com/114.114.114.114
