--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76245,6 +76245,7 @@ server=/sz-talant.com/114.114.114.114
 server=/sz-tianmai.com/114.114.114.114
 server=/sz-trip.com/114.114.114.114
 server=/sz-ua.com/114.114.114.114
+server=/sz-xiran.com/114.114.114.114
 server=/sz-xshg.com/114.114.114.114
 server=/sz-yian.com/114.114.114.114
 server=/sz-ytq.com/114.114.114.114
