--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75718,6 +75718,7 @@ server=/suzhoujicai.com/114.114.114.114
 server=/suzhouleasing.com/114.114.114.114
 server=/suzhoulida.com/114.114.114.114
 server=/suzhousj.com/114.114.114.114
+server=/suzhouyabao.com/114.114.114.114
 server=/suzip.com/114.114.114.114
 server=/suzuki-china.com/114.114.114.114
 server=/suzuki-shanghai.com/114.114.114.114
