--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76682,6 +76682,7 @@ server=/sztxsz.com/114.114.114.114
 server=/sztxw.com/114.114.114.114
 server=/sztzzs.com/114.114.114.114
 server=/szuavia.org/114.114.114.114
+server=/szudad.com/114.114.114.114
 server=/szunionlab.com/114.114.114.114
 server=/szvannylove.com/114.114.114.114
 server=/szvca.com/114.114.114.114
