--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80886,6 +80886,7 @@ server=/uneede.com/114.114.114.114
 server=/unetall.com/114.114.114.114
 server=/unfish.net/114.114.114.114
 server=/ungifts.com/114.114.114.114
+server=/uni-cent.com/114.114.114.114
 server=/uni-forest.com/114.114.114.114
 server=/uni-perfect.com/114.114.114.114
 server=/uni-ubi.com/114.114.114.114
