--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72660,6 +72660,7 @@ server=/shryhs.com/114.114.114.114
 server=/shryou.com/114.114.114.114
 server=/shsaic.net/114.114.114.114
 server=/shsanfang.com/114.114.114.114
+server=/shsanji.com/114.114.114.114
 server=/shsbnu.net/114.114.114.114
 server=/shsby.com/114.114.114.114
 server=/shsc-valve.com/114.114.114.114
