--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76316,6 +76316,7 @@ server=/szcatic.com/114.114.114.114
 server=/szcfyi.com/114.114.114.114
 server=/szchengli.com/114.114.114.114
 server=/szchengyue.com/114.114.114.114
+server=/szchunqiu.com/114.114.114.114
 server=/szclbxf.com/114.114.114.114
 server=/szcleanair.com/114.114.114.114
 server=/szclxzx.com/114.114.114.114
