--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55398,6 +55398,7 @@ server=/lrist.com/114.114.114.114
 server=/lrkdzx.com/114.114.114.114
 server=/lrkj.net/114.114.114.114
 server=/lrlvs.com/114.114.114.114
+server=/lrmation.com/114.114.114.114
 server=/lrs001.com/114.114.114.114
 server=/lrscloud2.com/114.114.114.114
 server=/lrscloud3.com/114.114.114.114
