--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72042,6 +72042,7 @@ server=/shenyu.me/114.114.114.114
 server=/shenyuanquan.com/114.114.114.114
 server=/shenyunkeji.com/114.114.114.114
 server=/shenyunlaw.com/114.114.114.114
+server=/shenyunmedical.com/114.114.114.114
 server=/shenyunwang.com/114.114.114.114
 server=/shenzan.com/114.114.114.114
 server=/shenzaokeji.com/114.114.114.114
