accelerated-domains: add szsolutia.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76652,6 +76652,7 @@ server=/szsmk.com/114.114.114.114
 server=/szsmyg.com/114.114.114.114
 server=/szsnking.com/114.114.114.114
 server=/szsoa.org/114.114.114.114
+server=/szsolutia.com/114.114.114.114
 server=/szsptk.com/114.114.114.114
 server=/szsq.net/114.114.114.114
 server=/szsrs.com/114.114.114.114
