--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14472,6 +14472,7 @@ server=/bikehome.net/114.114.114.114
 server=/biketo.com/114.114.114.114
 server=/biketour-giant.com/114.114.114.114
 server=/biking-m.com/114.114.114.114
+server=/bilandtech.com/114.114.114.114
 server=/bilezu.com/114.114.114.114
 server=/biliapi.com/114.114.114.114
 server=/biliapi.net/114.114.114.114
