--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72484,6 +72484,7 @@ server=/shoeswheels.net/114.114.114.114
 server=/shojo.cc/114.114.114.114
 server=/shokan.org/114.114.114.114
 server=/shokw.com/114.114.114.114
+server=/sholaser.com/114.114.114.114
 server=/shomop.com/114.114.114.114
 server=/shomyq.com/114.114.114.114
 server=/shootmedia.net/114.114.114.114
