accelerated-domains: add sufoma.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75327,6 +75327,7 @@ server=/suease.com/114.114.114.114
 server=/sueon.com/114.114.114.114
 server=/sufangxu.com/114.114.114.114
 server=/sufeinet.com/114.114.114.114
+server=/sufoma.com/114.114.114.114
 server=/sufont.com/114.114.114.114
 server=/sugaov.com/114.114.114.114
 server=/sugarall365.com/114.114.114.114
