accelerated-domains: add tuoyuantec.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80006,6 +80006,7 @@ server=/tuotoo.com/114.114.114.114
 server=/tuotuozu.com/114.114.114.114
 server=/tuoweisi.com/114.114.114.114
 server=/tuoyuan619.com/114.114.114.114
+server=/tuoyuantec.com/114.114.114.114
 server=/tuoyuvip.com/114.114.114.114
 server=/tuozhe8.com/114.114.114.114
 server=/tuozheng168.com/114.114.114.114
