--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76241,6 +76241,7 @@ server=/sz-iso.com/114.114.114.114
 server=/sz-jiahong.com/114.114.114.114
 server=/sz-jlc.com/114.114.114.114
 server=/sz-kaito.com/114.114.114.114
+server=/sz-keli.com/114.114.114.114
 server=/sz-lcsc.com/114.114.114.114
 server=/sz-lzyy.com/114.114.114.114
 server=/sz-meicheng.com/114.114.114.114
