accelerated-domains: add insulators-china.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45191,6 +45191,7 @@ server=/insta360.com/114.114.114.114
 server=/instafogging.com/114.114.114.114
 server=/installgreat.com/114.114.114.114
 server=/instome.com/114.114.114.114
+server=/insulators-china.com/114.114.114.114
 server=/insun-china.com/114.114.114.114
 server=/inswindow.com/114.114.114.114
 server=/insxz.com/114.114.114.114
