--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73987,6 +73987,7 @@ server=/smknow.com/114.114.114.114
 server=/smkxyjy.com/114.114.114.114
 server=/smlaw8.com/114.114.114.114
 server=/smlqcl.com/114.114.114.114
+server=/smmc.com/114.114.114.114
 server=/smo-clinplus.com/114.114.114.114
 server=/smo-software.com/114.114.114.114
 server=/smobird.cc/114.114.114.114
