--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76218,6 +76218,7 @@ server=/syzlzz.com/114.114.114.114
 server=/syzoukan.com/114.114.114.114
 server=/syzsgroup.com/114.114.114.114
 server=/sz-3a.com/114.114.114.114
+server=/sz-acuvu.com/114.114.114.114
 server=/sz-amc.com/114.114.114.114
 server=/sz-baile.com/114.114.114.114
 server=/sz-bst.com/114.114.114.114
