--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39969,6 +39969,7 @@ server=/hgzkb.com/114.114.114.114
 server=/hgzrt.com/114.114.114.114
 server=/hgzyxy.com/114.114.114.114
 server=/hh-gltd.com/114.114.114.114
+server=/hh-honghu.com/114.114.114.114
 server=/hh-medic.com/114.114.114.114
 server=/hh-pcbs.com/114.114.114.114
 server=/hh-pmp.com/114.114.114.114
