--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50740,6 +50740,7 @@ server=/keda-u.com/114.114.114.114
 server=/keda.com/114.114.114.114
 server=/keda.fun/114.114.114.114
 server=/kedabai.com/114.114.114.114
+server=/kedacom.com/114.114.114.114
 server=/kedang.net/114.114.114.114
 server=/kedaotech.com/114.114.114.114
 server=/kede.com/114.114.114.114
