--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94272,6 +94272,7 @@ server=/yunser.com/114.114.114.114
 server=/yunshan.net/114.114.114.114
 server=/yunshangkj.com/114.114.114.114
 server=/yunshangnc.com/114.114.114.114
+server=/yunshangsuzhou.com/114.114.114.114
 server=/yunshangxuzhou.com/114.114.114.114
 server=/yunshanit.com/114.114.114.114
 server=/yunshanmeicai.com/114.114.114.114
