accelerated-domains: add synexus-motor.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76123,6 +76123,7 @@ server=/synacast.com/114.114.114.114
 server=/synball.com/114.114.114.114
 server=/sync.sh/114.114.114.114
 server=/syncedoffplanet.com/114.114.114.114
+server=/synexus-motor.com/114.114.114.114
 server=/synjones.com/114.114.114.114
 server=/synjones.net/114.114.114.114
 server=/synnchem.com/114.114.114.114
