--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76810,6 +76810,7 @@ server=/szzuting.com/114.114.114.114
 server=/szzxks.net/114.114.114.114
 server=/szzyqc.net/114.114.114.114
 server=/szzyqy.com/114.114.114.114
+server=/szzytech.com/114.114.114.114
 server=/szzywxkj.com/114.114.114.114
 server=/t-d.chat/114.114.114.114
 server=/t-d.tv/114.114.114.114
