--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42260,6 +42260,7 @@ server=/huayiwork.com/114.114.114.114
 server=/huayou.com/114.114.114.114
 server=/huayoumengze.com/114.114.114.114
 server=/huayoutianyu.com/114.114.114.114
+server=/huayuan-print.com/114.114.114.114
 server=/huayuanlcd.com/114.114.114.114
 server=/huayuchaxiang.com/114.114.114.114
 server=/huayue119.com/114.114.114.114
