--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75727,6 +75727,7 @@ server=/suyutech.com/114.114.114.114
 server=/suzhou-marathon.com/114.114.114.114
 server=/suzhou-otsuka.com/114.114.114.114
 server=/suzhoubank.com/114.114.114.114
+server=/suzhoubeili.com/114.114.114.114
 server=/suzhouds.com/114.114.114.114
 server=/suzhoufashion.com/114.114.114.114
 server=/suzhouhengtai.com/114.114.114.114
