accelerated-domains: add szaupd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76304,6 +76304,7 @@ server=/szas.com/114.114.114.114
 server=/szastcg.com/114.114.114.114
 server=/szaudio.com/114.114.114.114
 server=/szaudio.net/114.114.114.114
+server=/szaupd.com/114.114.114.114
 server=/szautism.com/114.114.114.114
 server=/szbaicao.com/114.114.114.114
 server=/szbaleng.com/114.114.114.114
