accelerated-domains: add lilaigroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54062,6 +54062,7 @@ server=/liking.site/114.114.114.114
 server=/likingfit.com/114.114.114.114
 server=/likuli.com/114.114.114.114
 server=/likuso.com/114.114.114.114
+server=/lilaigroup.com/114.114.114.114
 server=/lili.cc/114.114.114.114
 server=/liliangji.com/114.114.114.114
 server=/liliangwl.com/114.114.114.114
