--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44998,6 +44998,7 @@ server=/in853.com/114.114.114.114
 server=/in955.com/114.114.114.114
 server=/inabr.com/114.114.114.114
 server=/inad.com/114.114.114.114
+server=/inaink.com/114.114.114.114
 server=/inanrenbang.com/114.114.114.114
 server=/inbeing.net/114.114.114.114
 server=/inbilin.com/114.114.114.114
