--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49536,6 +49536,7 @@ server=/julanling.com/114.114.114.114
 server=/julecn.com/114.114.114.114
 server=/julefun.com/114.114.114.114
 server=/julialabarge.com/114.114.114.114
+server=/juliandianqi.com/114.114.114.114
 server=/juliang8.com/114.114.114.114
 server=/juliangcili.com/114.114.114.114
 server=/julianghttp.com/114.114.114.114
