--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74707,6 +74707,7 @@ server=/spin-view.com/114.114.114.114
 server=/spirit-doll.net/114.114.114.114
 server=/spirithy.com/114.114.114.114
 server=/spischolar.com/114.114.114.114
+server=/spiwcn.com/114.114.114.114
 server=/spjxcn.com/114.114.114.114
 server=/splaybow.com/114.114.114.114
 server=/splayer.work/114.114.114.114
