--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76244,6 +76244,7 @@ server=/sz-ebest.com/114.114.114.114
 server=/sz-edsy.com/114.114.114.114
 server=/sz-ekl.com/114.114.114.114
 server=/sz-etong.com/114.114.114.114
+server=/sz-fukuda.com/114.114.114.114
 server=/sz-gaokai.com/114.114.114.114
 server=/sz-hdenergy.com/114.114.114.114
 server=/sz-hiragawa.com/114.114.114.114
