--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50092,6 +50092,7 @@ server=/jysq.net/114.114.114.114
 server=/jyss.com/114.114.114.114
 server=/jyss.net/114.114.114.114
 server=/jyssjxc.com/114.114.114.114
+server=/jysteels.com/114.114.114.114
 server=/jysyyey.com/114.114.114.114
 server=/jysyzk.com/114.114.114.114
 server=/jytaier.com/114.114.114.114
