accelerated-domains: add sufachina.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75339,6 +75339,7 @@ server=/sudupower.net/114.114.114.114
 server=/sudusite.com/114.114.114.114
 server=/suease.com/114.114.114.114
 server=/sueon.com/114.114.114.114
+server=/sufachina.com/114.114.114.114
 server=/sufangxu.com/114.114.114.114
 server=/sufeinet.com/114.114.114.114
 server=/sufoma.com/114.114.114.114
