--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76432,6 +76432,7 @@ server=/szglsf.com/114.114.114.114
 server=/szgraphene.com/114.114.114.114
 server=/szguanai.com/114.114.114.114
 server=/szguante.com/114.114.114.114
+server=/szguixiang.com/114.114.114.114
 server=/szgwin.com/114.114.114.114
 server=/szgwsd.com/114.114.114.114
 server=/szgymz.com/114.114.114.114
