--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68953,6 +68953,7 @@ server=/ricterz.me/114.114.114.114
 server=/rictos.com/114.114.114.114
 server=/riecent.com/114.114.114.114
 server=/rifubao.com/114.114.114.114
+server=/rigerna.com/114.114.114.114
 server=/rigger-micro.com/114.114.114.114
 server=/rightknights.com/114.114.114.114
 server=/rightmatching.com/114.114.114.114
