--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61536,6 +61536,7 @@ server=/njxsmz.com/114.114.114.114
 server=/njxty.com/114.114.114.114
 server=/njxueyun.com/114.114.114.114
 server=/njxwyl.com/114.114.114.114
+server=/njxyyy.com/114.114.114.114
 server=/njxzwh.com/114.114.114.114
 server=/njycwy.com/114.114.114.114
 server=/njyfpca.org/114.114.114.114
