--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90874,6 +90874,7 @@ server=/yayigou.net/114.114.114.114
 server=/yayihouse.com/114.114.114.114
 server=/yayiskq.com/114.114.114.114
 server=/yayitianyun.com/114.114.114.114
+server=/yayiyun.net/114.114.114.114
 server=/yayjrj.com/114.114.114.114
 server=/yayouapp.com/114.114.114.114
 server=/yaypool.com/114.114.114.114
