--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91821,6 +91821,7 @@ server=/yimingzhi.net/114.114.114.114
 server=/yimininfo.com/114.114.114.114
 server=/yiminjiayuan.com/114.114.114.114
 server=/yiminw.com/114.114.114.114
+server=/yiminyy.com/114.114.114.114
 server=/yimisoft.com/114.114.114.114
 server=/yimitongxue.com/114.114.114.114
 server=/yimiyisu.com/114.114.114.114
