accelerated-domains: add njjbrmyy.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61404,6 +61404,7 @@ server=/njiairport.com/114.114.114.114
 server=/njibhu.com/114.114.114.114
 server=/njicg.com/114.114.114.114
 server=/njiec.com/114.114.114.114
+server=/njjbrmyy.net/114.114.114.114
 server=/njjcbio.com/114.114.114.114
 server=/njjcpm.com/114.114.114.114
 server=/njjdzl.com/114.114.114.114
