accelerated-domains: add njyy.name

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61551,6 +61551,7 @@ server=/njytian.com/114.114.114.114
 server=/njyule.club/114.114.114.114
 server=/njyxdq.com/114.114.114.114
 server=/njyy.com/114.114.114.114
+server=/njyy.name/114.114.114.114
 server=/njyydl.com/114.114.114.114
 server=/njyz.net/114.114.114.114
 server=/njyzgz.com/114.114.114.114
