accelerated-domains: add 010gkb.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88,6 +88,7 @@ server=/010dell.com/114.114.114.114
 server=/010dh.com/114.114.114.114
 server=/010dsmzyy.com/114.114.114.114
 server=/010fang.net/114.114.114.114
+server=/010gkb.com/114.114.114.114
 server=/010jianzhan.com/114.114.114.114
 server=/010lf.com/114.114.114.114
 server=/010xiongdi.com/114.114.114.114
