--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61370,6 +61370,7 @@ server=/njgdbus.com/114.114.114.114
 server=/njgdhb.com/114.114.114.114
 server=/njgdmm.com/114.114.114.114
 server=/njgean.com/114.114.114.114
+server=/njggk.com/114.114.114.114
 server=/njgh.org/114.114.114.114
 server=/njghgf.com/114.114.114.114
 server=/njgjj.com/114.114.114.114
