accelerated-domains: add njhxzx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61402,6 +61402,7 @@ server=/njhszoo.com/114.114.114.114
 server=/njhuachuang.com/114.114.114.114
 server=/njhuatong.com/114.114.114.114
 server=/njhuazhu.com/114.114.114.114
+server=/njhxzx.com/114.114.114.114
 server=/njhy-tech.com/114.114.114.114
 server=/njhzypiano.com/114.114.114.114
 server=/njiairport.com/114.114.114.114
