accelerated-domains: add njml120.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61458,6 +61458,7 @@ server=/njmbwxzx.com/114.114.114.114
 server=/njmeisai.com/114.114.114.114
 server=/njmjzn.com/114.114.114.114
 server=/njmkt.com/114.114.114.114
+server=/njml120.com/114.114.114.114
 server=/njmuseum.com/114.114.114.114
 server=/njmuseumadmin.com/114.114.114.114
 server=/njmwwl.com/114.114.114.114
