--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54331,6 +54331,7 @@ server=/linruanwangluo.com/114.114.114.114
 server=/lins-bros.com/114.114.114.114
 server=/linshang.com/114.114.114.114
 server=/linshigong.com/114.114.114.114
+server=/linshiyongling.com/114.114.114.114
 server=/linsn.com/114.114.114.114
 server=/linstitute.net/114.114.114.114
 server=/lint2.com/114.114.114.114
