accelerated-domains: add njcjby.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61337,6 +61337,7 @@ server=/njcedu.com/114.114.114.114
 server=/njcgs.com/114.114.114.114
 server=/njchina.com/114.114.114.114
 server=/njcitygas.com/114.114.114.114
+server=/njcjby.com/114.114.114.114
 server=/njcjzz.com/114.114.114.114
 server=/njcky.com/114.114.114.114
 server=/njcnmc.com/114.114.114.114
