accelerated-domains: add vision-nj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82052,6 +82052,7 @@ server=/vishavideo.com/114.114.114.114
 server=/visheng.com/114.114.114.114
 server=/vishoor.com/114.114.114.114
 server=/visinextek.com/114.114.114.114
+server=/vision-nj.com/114.114.114.114
 server=/vision-systems-china.com/114.114.114.114
 server=/visionandview.com/114.114.114.114
 server=/visionarytech.ltd/114.114.114.114
