accelerated-domains: add lipind.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54408,6 +54408,7 @@ server=/lipiji.com/114.114.114.114
 server=/lipilianghang.com/114.114.114.114
 server=/lipin.com/114.114.114.114
 server=/lipin51.com/114.114.114.114
+server=/lipind.com/114.114.114.114
 server=/lipinduihuan.com/114.114.114.114
 server=/lipro.com/114.114.114.114
 server=/lipro.net/114.114.114.114
