--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -1188,6 +1188,7 @@ server=/120bid.com/114.114.114.114
 server=/120btc.com/114.114.114.114
 server=/120fd.com/114.114.114.114
 server=/120it.com/114.114.114.114
+server=/120jg.com/114.114.114.114
 server=/120jhccz.com/114.114.114.114
 server=/120jxxh.com/114.114.114.114
 server=/120kid.com/114.114.114.114
