accelerated-domains: add nanjingbyby.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60344,6 +60344,7 @@ server=/nanhuangic.com/114.114.114.114
 server=/nanhufund.com/114.114.114.114
 server=/nanhuwang.com/114.114.114.114
 server=/nanjing.com/114.114.114.114
+server=/nanjingbyby.com/114.114.114.114
 server=/nanjingchenxi.com/114.114.114.114
 server=/nanjinghuihe.com/114.114.114.114
 server=/nanjinghuojia.net/114.114.114.114
