accelerated-domains: add nj303yy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61319,6 +61319,7 @@ server=/nj-zhongbo.com/114.114.114.114
 server=/nj12320.org/114.114.114.114
 server=/nj1937.org/114.114.114.114
 server=/nj29jt.net/114.114.114.114
+server=/nj303yy.com/114.114.114.114
 server=/njajjt.com/114.114.114.114
 server=/njaoti.com/114.114.114.114
 server=/njatl.com/114.114.114.114
