--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61372,6 +61372,7 @@ server=/njfmz.com/114.114.114.114
 server=/njforge.com/114.114.114.114
 server=/njfybjy.com/114.114.114.114
 server=/njgb.com/114.114.114.114
+server=/njgcyy.com/114.114.114.114
 server=/njgdbus.com/114.114.114.114
 server=/njgdhb.com/114.114.114.114
 server=/njgdmm.com/114.114.114.114
