accelerated-domains: add kanyaji.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50534,6 +50534,7 @@ server=/kantsuu.com/114.114.114.114
 server=/kantu.com/114.114.114.114
 server=/kanwz.net/114.114.114.114
 server=/kanxue.com/114.114.114.114
+server=/kanyaji.com/114.114.114.114
 server=/kanyihui.com/114.114.114.114
 server=/kanyijie.com/114.114.114.114
 server=/kanyouxi.com/114.114.114.114
