--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61421,6 +61421,7 @@ server=/njjbrmyy.net/114.114.114.114
 server=/njjcbio.com/114.114.114.114
 server=/njjcpm.com/114.114.114.114
 server=/njjdzl.com/114.114.114.114
+server=/njjgfckyy.com/114.114.114.114
 server=/njjiancai.com/114.114.114.114
 server=/njjn.com/114.114.114.114
 server=/njjrc.com/114.114.114.114
