accelerated-domains: add njjnwzyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61424,6 +61424,7 @@ server=/njjdzl.com/114.114.114.114
 server=/njjgfckyy.com/114.114.114.114
 server=/njjiancai.com/114.114.114.114
 server=/njjn.com/114.114.114.114
+server=/njjnwzyy.com/114.114.114.114
 server=/njjrc.com/114.114.114.114
 server=/njjrkj.com/114.114.114.114
 server=/njjrlf.com/114.114.114.114
