accelerated-domains: add malifuke.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56780,6 +56780,7 @@ server=/maldun.com/114.114.114.114
 server=/malei.net/114.114.114.114
 server=/males120.com/114.114.114.114
 server=/malifenlawyer.com/114.114.114.114
+server=/malifuke.org/114.114.114.114
 server=/malimalihome.net/114.114.114.114
 server=/malingguzhai.com/114.114.114.114
 server=/maliquankai.com/114.114.114.114
