accelerated-domains: add ythospital.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93665,6 +93665,7 @@ server=/ytg666.com/114.114.114.114
 server=/ytghnb.com/114.114.114.114
 server=/ytgos.com/114.114.114.114
 server=/ythairui.com/114.114.114.114
+server=/ythospital.com/114.114.114.114
 server=/ythouse.com/114.114.114.114
 server=/ythzg.com/114.114.114.114
 server=/ytj888.com/114.114.114.114
