accelerated-domains: add njtianyou120.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61527,6 +61527,7 @@ server=/njszy.com/114.114.114.114
 server=/njtapery.com/114.114.114.114
 server=/njtgdq.com/114.114.114.114
 server=/njthgy.com/114.114.114.114
+server=/njtianyou120.com/114.114.114.114
 server=/njtjyq.com/114.114.114.114
 server=/njtoyo.com/114.114.114.114
 server=/njtqw.com/114.114.114.114
