--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61532,6 +61532,7 @@ server=/njtjyq.com/114.114.114.114
 server=/njtoyo.com/114.114.114.114
 server=/njtqw.com/114.114.114.114
 server=/njtrabon.com/114.114.114.114
+server=/njtransplant.com/114.114.114.114
 server=/njtst.com/114.114.114.114
 server=/njuftp.org/114.114.114.114
 server=/njustar.com/114.114.114.114
