--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55488,6 +55488,7 @@ server=/lsqpay.com/114.114.114.114
 server=/lsqqy.com/114.114.114.114
 server=/lsqy398.com/114.114.114.114
 server=/lsrbs.net/114.114.114.114
+server=/lsrmyy.com/114.114.114.114
 server=/lssggzy.com/114.114.114.114
 server=/lssjt.com/114.114.114.114
 server=/lsszgh.com/114.114.114.114
