accelerated-domains: add njjianguo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61426,6 +61426,7 @@ server=/njjcpm.com/114.114.114.114
 server=/njjdzl.com/114.114.114.114
 server=/njjgfckyy.com/114.114.114.114
 server=/njjiancai.com/114.114.114.114
+server=/njjianguo.com/114.114.114.114
 server=/njjn.com/114.114.114.114
 server=/njjnwzyy.com/114.114.114.114
 server=/njjrc.com/114.114.114.114
