--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85919,6 +85919,7 @@ server=/wuxingzuji.com/114.114.114.114
 server=/wuxinhua.com/114.114.114.114
 server=/wuxinmuye.com/114.114.114.114
 server=/wuxipark.com/114.114.114.114
+server=/wuxiph.com/114.114.114.114
 server=/wuxitzjx.com/114.114.114.114
 server=/wuxiwang.net/114.114.114.114
 server=/wuxiworld.com/114.114.114.114
