--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61510,6 +61510,7 @@ server=/njsfyb.com/114.114.114.114
 server=/njshsh.com/114.114.114.114
 server=/njsimba.com/114.114.114.114
 server=/njsjz.com/114.114.114.114
+server=/njskxlyy.com/114.114.114.114
 server=/njskxlyy.net/114.114.114.114
 server=/njslaq.com/114.114.114.114
 server=/njslawyers.org/114.114.114.114
