--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46435,6 +46435,7 @@ server=/jblogistics.com/114.114.114.114
 server=/jbote.com/114.114.114.114
 server=/jbpmhk.com/114.114.114.114
 server=/jbpzs.com/114.114.114.114
+server=/jbrmyy.com/114.114.114.114
 server=/jbryun.com/114.114.114.114
 server=/jbs-kj.com/114.114.114.114
 server=/jbsd008.com/114.114.114.114
