accelerated-domains: add nxyy.asia

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62569,6 +62569,7 @@ server=/nxxzycdn.com/114.114.114.114
 server=/nxxzyimg.com/114.114.114.114
 server=/nxyqs.com/114.114.114.114
 server=/nxyqs.net/114.114.114.114
+server=/nxyy.asia/114.114.114.114
 server=/nxzkjsjt.com/114.114.114.114
 server=/ny-yy.com/114.114.114.114
 server=/nya.ink/114.114.114.114
