--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49254,6 +49254,7 @@ server=/jsrc.com/114.114.114.114
 server=/jsrcu.com/114.114.114.114
 server=/jsrdgg.com/114.114.114.114
 server=/jsrmzscl.com/114.114.114.114
+server=/jsrpebh.com/114.114.114.114
 server=/jsrrcb.com/114.114.114.114
 server=/jsrsrc.com/114.114.114.114
 server=/jsruiyin.com/114.114.114.114
