--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49209,6 +49209,7 @@ server=/jsmfk.com/114.114.114.114
 server=/jsmian.com/114.114.114.114
 server=/jsmjys.com/114.114.114.114
 server=/jsmkls.com/114.114.114.114
+server=/jsmkyy.com/114.114.114.114
 server=/jsmo.xin/114.114.114.114
 server=/jsmsg.com/114.114.114.114
 server=/jsmxkj.com/114.114.114.114
