accelerated-domains: add njzfy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61587,6 +61587,7 @@ server=/njyzmj.com/114.114.114.114
 server=/njzdyq.com/114.114.114.114
 server=/njzdyy.com/114.114.114.114
 server=/njzec.com/114.114.114.114
+server=/njzfy.com/114.114.114.114
 server=/njzhengluan.com/114.114.114.114
 server=/njzhituo.com/114.114.114.114
 server=/njzhzx.net/114.114.114.114
