--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49269,6 +49269,7 @@ server=/jssbaoxian.com/114.114.114.114
 server=/jssbjt.com/114.114.114.114
 server=/jsscsj.com/114.114.114.114
 server=/jssddz.com/114.114.114.114
+server=/jssdezyy.com/114.114.114.114
 server=/jssdh.com/114.114.114.114
 server=/jssfx.com/114.114.114.114
 server=/jsshfcw.com/114.114.114.114
