accelerated-domains: add yihekf.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91724,6 +91724,7 @@ server=/yihaomen.com/114.114.114.114
 server=/yihchina.com/114.114.114.114
 server=/yiheda.com/114.114.114.114
 server=/yihedoors.com/114.114.114.114
+server=/yihekf.com/114.114.114.114
 server=/yihke.com/114.114.114.114
 server=/yihong001.com/114.114.114.114
 server=/yihong1718.com/114.114.114.114
