--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61418,6 +61418,7 @@ server=/njhszoo.com/114.114.114.114
 server=/njhuachuang.com/114.114.114.114
 server=/njhuatong.com/114.114.114.114
 server=/njhuazhu.com/114.114.114.114
+server=/njhxnpx.com/114.114.114.114
 server=/njhxzx.com/114.114.114.114
 server=/njhy-tech.com/114.114.114.114
 server=/njhzypiano.com/114.114.114.114
