accelerated-domains: add njnysoft.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61493,6 +61493,7 @@ server=/njnhyx.net/114.114.114.114
 server=/njningyi.com/114.114.114.114
 server=/njnkxt.com/114.114.114.114
 server=/njnwyy.com/114.114.114.114
+server=/njnysoft.com/114.114.114.114
 server=/njnzrs.com/114.114.114.114
 server=/njodu.com/114.114.114.114
 server=/njpkzyy.com/114.114.114.114
