--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15688,6 +15688,7 @@ server=/bon-top.com/114.114.114.114
 server=/bon-wine.com/114.114.114.114
 server=/bonan.vip/114.114.114.114
 server=/bonbonbongame.com/114.114.114.114
+server=/bond120.com/114.114.114.114
 server=/bondlady.com/114.114.114.114
 server=/bonepuppy.com/114.114.114.114
 server=/bonestgattiwatch.com/114.114.114.114
