accelerated-domains: add njfk.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61375,6 +61375,7 @@ server=/njdq-ld.com/114.114.114.114
 server=/njdqgytg.com/114.114.114.114
 server=/njeport.com/114.114.114.114
 server=/njfjkj.com/114.114.114.114
+server=/njfk.net/114.114.114.114
 server=/njfkdq.com/114.114.114.114
 server=/njfklngl.com/114.114.114.114
 server=/njflt.com/114.114.114.114
