--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48695,6 +48695,7 @@ server=/jnnc.com/114.114.114.114
 server=/jnnews.tv/114.114.114.114
 server=/jnpfsoft.com/114.114.114.114
 server=/jnpjyy.com/114.114.114.114
+server=/jnqzyy.com/114.114.114.114
 server=/jnrain.com/114.114.114.114
 server=/jnruilun.com/114.114.114.114
 server=/jnshijia.com/114.114.114.114
