accelerated-domains: add jiangbeiyiyuan.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47120,6 +47120,7 @@ server=/jiang11.com/114.114.114.114
 server=/jiang7.com/114.114.114.114
 server=/jiangbeijituan.com/114.114.114.114
 server=/jiangbeishuicheng.com/114.114.114.114
+server=/jiangbeiyiyuan.net/114.114.114.114
 server=/jiangchaochina.com/114.114.114.114
 server=/jiangcp.com/114.114.114.114
 server=/jiangduoduo.com/114.114.114.114
