--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71876,6 +71876,7 @@ server=/shdyty.com/114.114.114.114
 server=/shdzfp.com/114.114.114.114
 server=/sheasyoffice.com/114.114.114.114
 server=/shebao.net/114.114.114.114
+server=/shebao100.com/114.114.114.114
 server=/shebao5.com/114.114.114.114
 server=/shebao520.com/114.114.114.114
 server=/shebaomi.com/114.114.114.114
