--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61377,6 +61377,7 @@ server=/njdnjt.com/114.114.114.114
 server=/njdq-ld.com/114.114.114.114
 server=/njdqgytg.com/114.114.114.114
 server=/njeport.com/114.114.114.114
+server=/njfdyy.com/114.114.114.114
 server=/njfjkj.com/114.114.114.114
 server=/njfk.net/114.114.114.114
 server=/njfkdq.com/114.114.114.114
