accelerated-domains: add jsstyt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49287,6 +49287,7 @@ server=/jssnrcb.com/114.114.114.114
 server=/jssoar.com/114.114.114.114
 server=/jsssrj.com/114.114.114.114
 server=/jsstbcgsw.com/114.114.114.114
+server=/jsstyt.com/114.114.114.114
 server=/jssutong.com/114.114.114.114
 server=/jssuty.com/114.114.114.114
 server=/jsswordshop.com/114.114.114.114
