accelerated-domains: add yiexi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91675,6 +91675,7 @@ server=/yidun.com/114.114.114.114
 server=/yiduoxinya.com/114.114.114.114
 server=/yiernews.com/114.114.114.114
 server=/yieryouxin.com/114.114.114.114
+server=/yiexi.com/114.114.114.114
 server=/yifabao.com/114.114.114.114
 server=/yifajingren.com/114.114.114.114
 server=/yifake.com/114.114.114.114
