--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -222,6 +222,7 @@ server=/02516.com/114.114.114.114
 server=/025ct.com/114.114.114.114
 server=/025kaiyi.com/114.114.114.114
 server=/025nj.com/114.114.114.114
+server=/025njtf.com/114.114.114.114
 server=/025sc.com/114.114.114.114
 server=/025suyu.com/114.114.114.114
 server=/025tffs.com/114.114.114.114
