--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55366,6 +55366,7 @@ server=/loyar.com/114.114.114.114
 server=/loyi.net/114.114.114.114
 server=/loyo.cc/114.114.114.114
 server=/lp.fyi/114.114.114.114
+server=/lp025.com/114.114.114.114
 server=/lp1901.com/114.114.114.114
 server=/lpaoz.com/114.114.114.114
 server=/lpcheng.com/114.114.114.114
