--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62642,6 +62642,7 @@ server=/nzsiteres.com/114.114.114.114
 server=/nzw6.com/114.114.114.114
 server=/nzwgs.com/114.114.114.114
 server=/nzydzsw.com/114.114.114.114
+server=/nzygyt.com/114.114.114.114
 server=/o--o.win/114.114.114.114
 server=/o-hr.com/114.114.114.114
 server=/o-netcom.com/114.114.114.114
