accelerated-domains: add xxhnanke.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90140,6 +90140,7 @@ server=/xxghh.biz/114.114.114.114
 server=/xxgzmlt.com/114.114.114.114
 server=/xxgzz.com/114.114.114.114
 server=/xxhd-tech.com/114.114.114.114
+server=/xxhnanke.com/114.114.114.114
 server=/xxhpkwd.com/114.114.114.114
 server=/xxhrd.com/114.114.114.114
 server=/xxhyzs.com/114.114.114.114
