--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93968,6 +93968,7 @@ server=/yueshenggame.com/114.114.114.114
 server=/yueshitv.com/114.114.114.114
 server=/yuesuoping.com/114.114.114.114
 server=/yuetingapp.com/114.114.114.114
+server=/yuetj.com/114.114.114.114
 server=/yuetongjt.com/114.114.114.114
 server=/yuetu.tech/114.114.114.114
 server=/yuetuvip.com/114.114.114.114
