--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46873,6 +46873,7 @@ server=/jg058.com/114.114.114.114
 server=/jg1060.com/114.114.114.114
 server=/jg1668.com/114.114.114.114
 server=/jg1994.com/114.114.114.114
+server=/jg91.com/114.114.114.114
 server=/jgcarbide.com/114.114.114.114
 server=/jgcgmb.com/114.114.114.114
 server=/jgchat.net/114.114.114.114
