accelerated-domains: add nmufh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61682,6 +61682,7 @@ server=/nmsl.gs/114.114.114.114
 server=/nmslwsnd.com/114.114.114.114
 server=/nmt2.com/114.114.114.114
 server=/nmtyxy.com/114.114.114.114
+server=/nmufh.com/114.114.114.114
 server=/nmvps.com/114.114.114.114
 server=/nmwbk.com/114.114.114.114
 server=/nmweidian.com/114.114.114.114
