--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50449,6 +50449,7 @@ server=/kang08.com/114.114.114.114
 server=/kang7.com/114.114.114.114
 server=/kangagws.com/114.114.114.114
 server=/kangame.tv/114.114.114.114
+server=/kangangchang.com/114.114.114.114
 server=/kangbaifoundation.com/114.114.114.114
 server=/kangbatv.com/114.114.114.114
 server=/kangbeifang.ltd/114.114.114.114
