--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50453,6 +50453,7 @@ server=/kangangchang.com/114.114.114.114
 server=/kangbaifoundation.com/114.114.114.114
 server=/kangbatv.com/114.114.114.114
 server=/kangbeifang.ltd/114.114.114.114
+server=/kangbeijia.com/114.114.114.114
 server=/kangbidz.com/114.114.114.114
 server=/kangbixing.com/114.114.114.114
 server=/kangchun.com/114.114.114.114
