accelerated-domains: add njcjszyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61364,6 +61364,7 @@ server=/njcgs.com/114.114.114.114
 server=/njchina.com/114.114.114.114
 server=/njcitygas.com/114.114.114.114
 server=/njcjby.com/114.114.114.114
+server=/njcjszyy.com/114.114.114.114
 server=/njcjzz.com/114.114.114.114
 server=/njcky.com/114.114.114.114
 server=/njcnmc.com/114.114.114.114
