--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97586,6 +97586,7 @@ server=/zjhkele.com/114.114.114.114
 server=/zjhlst.com/114.114.114.114
 server=/zjhnlianzhong.com/114.114.114.114
 server=/zjhnrb.com/114.114.114.114
+server=/zjhospital.net/114.114.114.114
 server=/zjhrnet.com/114.114.114.114
 server=/zjhsfs.com/114.114.114.114
 server=/zjhslyw.com/114.114.114.114
