--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64397,6 +64397,7 @@ server=/pesyun.com/114.114.114.114
 server=/pet86.com/114.114.114.114
 server=/petalmail.com/114.114.114.114
 server=/petalmaps.com/114.114.114.114
+server=/petctw.com/114.114.114.114
 server=/peter-zhou.com/114.114.114.114
 server=/peterjxl.com/114.114.114.114
 server=/petersonlian.com/114.114.114.114
