accelerated-domains: add jsatcm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49063,6 +49063,7 @@ server=/js96777.com/114.114.114.114
 server=/jsadt.com/114.114.114.114
 server=/jsahj.com/114.114.114.114
 server=/jsanbo.com/114.114.114.114
+server=/jsatcm.com/114.114.114.114
 server=/jsbaidu.com/114.114.114.114
 server=/jsballs.com/114.114.114.114
 server=/jsbc.com/114.114.114.114
