accelerated-domains: add sh4th.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71465,6 +71465,7 @@ server=/sh148.org/114.114.114.114
 server=/sh17.com/114.114.114.114
 server=/sh177.com/114.114.114.114
 server=/sh414.com/114.114.114.114
+server=/sh4th.com/114.114.114.114
 server=/sh5y.com/114.114.114.114
 server=/sh8y.com/114.114.114.114
 server=/sh9130.com/114.114.114.114
