--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71430,6 +71430,7 @@ server=/sh-italent.com/114.114.114.114
 server=/sh-jingjin.com/114.114.114.114
 server=/sh-jinxiang.com/114.114.114.114
 server=/sh-jjsb.com/114.114.114.114
+server=/sh-jkyy.com/114.114.114.114
 server=/sh-kechen.com/114.114.114.114
 server=/sh-kr.net/114.114.114.114
 server=/sh-likun.com/114.114.114.114
