--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71862,6 +71862,7 @@ server=/shccio.com/114.114.114.114
 server=/shcell.org/114.114.114.114
 server=/shcfcd.com/114.114.114.114
 server=/shchengkao.com/114.114.114.114
+server=/shchyy.net/114.114.114.114
 server=/shclearing.com/114.114.114.114
 server=/shcljoy.com/114.114.114.114
 server=/shclkj.com/114.114.114.114
