--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71942,6 +71942,7 @@ server=/shellpub.com/114.114.114.114
 server=/shellsec.com/114.114.114.114
 server=/shelter-china.com/114.114.114.114
 server=/shelwee.com/114.114.114.114
+server=/shen-grh.com/114.114.114.114
 server=/shen-nao.com/114.114.114.114
 server=/shen321.com/114.114.114.114
 server=/shenanhui.com/114.114.114.114
