--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72210,6 +72210,7 @@ server=/shhl56.com/114.114.114.114
 server=/shhmbio.com/114.114.114.114
 server=/shhorse.com/114.114.114.114
 server=/shhs-tw.com/114.114.114.114
+server=/shhuaerkang.com/114.114.114.114
 server=/shhuayi.com/114.114.114.114
 server=/shhuihai.com/114.114.114.114
 server=/shhuisd.com/114.114.114.114
