accelerated-domains: add tyztwhyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80441,6 +80441,7 @@ server=/tyyujie.com/114.114.114.114
 server=/tyzh.com/114.114.114.114
 server=/tyzhjx.com/114.114.114.114
 server=/tyzhyun.com/114.114.114.114
+server=/tyztwhyy.com/114.114.114.114
 server=/tz-dsp.com/114.114.114.114
 server=/tz.app/114.114.114.114
 server=/tz100.com/114.114.114.114
