accelerated-domains: add gaobohealthcare-sh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32262,6 +32262,7 @@ server=/gao7.com/114.114.114.114
 server=/gao7gao8.com/114.114.114.114
 server=/gaobei.com/114.114.114.114
 server=/gaobiao.xyz/114.114.114.114
+server=/gaobohealthcare-sh.com/114.114.114.114
 server=/gaocangyun.com/114.114.114.114
 server=/gaocegege.com/114.114.114.114
 server=/gaochun.info/114.114.114.114
