--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42141,6 +42141,7 @@ server=/huaruicom.com/114.114.114.114
 server=/huaruidns.com/114.114.114.114
 server=/huas.co/114.114.114.114
 server=/huash.com/114.114.114.114
+server=/huashan-neurosurgery.com/114.114.114.114
 server=/huashangcbbtv.com/114.114.114.114
 server=/huashangtop.com/114.114.114.114
 server=/huashen-edu.com/114.114.114.114
