--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57285,6 +57285,7 @@ server=/mccbim.com/114.114.114.114
 server=/mcchcdn.com/114.114.114.114
 server=/mcchina.com/114.114.114.114
 server=/mcchou.com/114.114.114.114
+server=/mccshhospital.com/114.114.114.114
 server=/mcd.cc/114.114.114.114
 server=/mcdchina.net/114.114.114.114
 server=/mcdsusan.com/114.114.114.114
