accelerated-domains: add ruichun120.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69578,6 +69578,7 @@ server=/ruibai.com/114.114.114.114
 server=/ruibopin.com/114.114.114.114
 server=/ruiccm.com/114.114.114.114
 server=/ruichengmedia.com/114.114.114.114
+server=/ruichun120.com/114.114.114.114
 server=/ruicitijian.com/114.114.114.114
 server=/ruida.org/114.114.114.114
 server=/ruidaedu.com/114.114.114.114
