--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71851,6 +71851,7 @@ server=/shbicycle.com/114.114.114.114
 server=/shbike.com/114.114.114.114
 server=/shbizhen.com/114.114.114.114
 server=/shbj.com/114.114.114.114
+server=/shbjfc.com/114.114.114.114
 server=/shbkwai.com/114.114.114.114
 server=/shbl8.com/114.114.114.114
 server=/shbnrj.com/114.114.114.114
