--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72476,6 +72476,7 @@ server=/shizhuang-inc.com/114.114.114.114
 server=/shizhuolin.com/114.114.114.114
 server=/shizhuonet.com/114.114.114.114
 server=/shj6789.com/114.114.114.114
+server=/shjakfyy.com/114.114.114.114
 server=/shjcm3d.com/114.114.114.114
 server=/shjdceo.com/114.114.114.114
 server=/shjdjx.com/114.114.114.114
