--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72531,6 +72531,7 @@ server=/shlll.net/114.114.114.114
 server=/shlmth.com/114.114.114.114
 server=/shlongtai.com/114.114.114.114
 server=/shlpk.com/114.114.114.114
+server=/shlsnk.com/114.114.114.114
 server=/shlsyb.com/114.114.114.114
 server=/shlungu.com/114.114.114.114
 server=/shmaas.net/114.114.114.114
