--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39138,6 +39138,7 @@ server=/hchbblg.com/114.114.114.114
 server=/hchbsb.com/114.114.114.114
 server=/hchezhu.com/114.114.114.114
 server=/hchik.com/114.114.114.114
+server=/hchina.com/114.114.114.114
 server=/hchlidc.com/114.114.114.114
 server=/hchliot.com/114.114.114.114
 server=/hcicloud.com/114.114.114.114
