--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39363,6 +39363,7 @@ server=/hebeizuqiu.net/114.114.114.114
 server=/hebetextile.com/114.114.114.114
 server=/hebgtjt.com/114.114.114.114
 server=/hebi99.com/114.114.114.114
+server=/hebinhospital.com/114.114.114.114
 server=/hebisf.com/114.114.114.114
 server=/hebitv.com/114.114.114.114
 server=/hebiw.com/114.114.114.114
