accelerated-domains: add qphospital.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67251,6 +67251,7 @@ server=/qpb187.com/114.114.114.114
 server=/qpdiy.com/114.114.114.114
 server=/qpgame.com/114.114.114.114
 server=/qpgczx.com/114.114.114.114
+server=/qphospital.com/114.114.114.114
 server=/qpjjku.com/114.114.114.114
 server=/qpjylm.com/114.114.114.114
 server=/qpkaifa.com/114.114.114.114
