accelerated-domains: add shsanfine.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72755,6 +72755,7 @@ server=/shryhs.com/114.114.114.114
 server=/shryou.com/114.114.114.114
 server=/shsaic.net/114.114.114.114
 server=/shsanfang.com/114.114.114.114
+server=/shsanfine.com/114.114.114.114
 server=/shsanji.com/114.114.114.114
 server=/shsbnu.net/114.114.114.114
 server=/shsby.com/114.114.114.114
