accelerated-domains: add shyongci.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73170,6 +73170,7 @@ server=/shykz123456.com/114.114.114.114
 server=/shylwlkj.com/114.114.114.114
 server=/shymhk.com/114.114.114.114
 server=/shyojin.com/114.114.114.114
+server=/shyongci.com/114.114.114.114
 server=/shyongwo.com/114.114.114.114
 server=/shyongzeng.com/114.114.114.114
 server=/shyouai.com/114.114.114.114
