accelerated-domains: add shxayy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73132,6 +73132,7 @@ server=/shwszdh.com/114.114.114.114
 server=/shwxtw.com/114.114.114.114
 server=/shwyky.net/114.114.114.114
 server=/shx11.xyz/114.114.114.114
+server=/shxayy.com/114.114.114.114
 server=/shxbe.com/114.114.114.114
 server=/shxcj.com/114.114.114.114
 server=/shxgroup.net/114.114.114.114
