accelerated-domains: add 120shgc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -1198,6 +1198,7 @@ server=/120kid.com/114.114.114.114
 server=/120kq.com/114.114.114.114
 server=/120scp.com/114.114.114.114
 server=/120sg.com/114.114.114.114
+server=/120shgc.com/114.114.114.114
 server=/120spd.com/114.114.114.114
 server=/120sun.com/114.114.114.114
 server=/120top.com/114.114.114.114
