accelerated-domains: add lsgqys.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55481,6 +55481,7 @@ server=/lsfvideo.com/114.114.114.114
 server=/lsfwpt.com/114.114.114.114
 server=/lsfyw.net/114.114.114.114
 server=/lsgenius.com/114.114.114.114
+server=/lsgqys.com/114.114.114.114
 server=/lsgrandtheatre.com/114.114.114.114
 server=/lsgw.com/114.114.114.114
 server=/lsgwebmall.com/114.114.114.114
