--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72189,6 +72189,7 @@ server=/shfft.co/114.114.114.114
 server=/shfft.com/114.114.114.114
 server=/shfigaro.com/114.114.114.114
 server=/shfilmmuseum.org/114.114.114.114
+server=/shfirstrehab.com/114.114.114.114
 server=/shfoxmotor.com/114.114.114.114
 server=/shfq.com/114.114.114.114
 server=/shfrp.com/114.114.114.114
