--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72496,6 +72496,7 @@ server=/shjincan.com/114.114.114.114
 server=/shjingxu.com/114.114.114.114
 server=/shjinnengzuche.com/114.114.114.114
 server=/shjkcable.com/114.114.114.114
+server=/shjlnzyy.com/114.114.114.114
 server=/shjob.work/114.114.114.114
 server=/shjsit.com/114.114.114.114
 server=/shjsrg.com/114.114.114.114
