accelerated-domains: add jdhospital.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46686,6 +46686,7 @@ server=/jdgwdq.com/114.114.114.114
 server=/jdh.com/114.114.114.114
 server=/jdh.healthcare/114.114.114.114
 server=/jdhmediajd.com/114.114.114.114
+server=/jdhospital.com/114.114.114.114
 server=/jdhuafeng.com/114.114.114.114
 server=/jdhyplay.com/114.114.114.114
 server=/jdindustry.com/114.114.114.114
