accelerated-domains: add tcmmh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77540,6 +77540,7 @@ server=/tcm100.com/114.114.114.114
 server=/tcm360.com/114.114.114.114
 server=/tcmdz.com/114.114.114.114
 server=/tcmfrj.com/114.114.114.114
+server=/tcmmh.com/114.114.114.114
 server=/tcmwindow.com/114.114.114.114
 server=/tcnews.cc/114.114.114.114
 server=/tcnvmms.com/114.114.114.114
