--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78294,6 +78294,7 @@ server=/tianlan.net/114.114.114.114
 server=/tianli-blog.club/114.114.114.114
 server=/tianlin001.com/114.114.114.114
 server=/tianlongshop.com/114.114.114.114
+server=/tianlun100.com/114.114.114.114
 server=/tianlungas.com/114.114.114.114
 server=/tianma3600.com/114.114.114.114
 server=/tianmaijigou.com/114.114.114.114
