--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39304,6 +39304,7 @@ server=/hdytjt.com/114.114.114.114
 server=/hdyujiu.com/114.114.114.114
 server=/hdyxgame.com/114.114.114.114
 server=/hdyxi.com/114.114.114.114
+server=/hdyy95.com/114.114.114.114
 server=/hdzbgs.com/114.114.114.114
 server=/hdzc.net/114.114.114.114
 server=/hdzcwlian.com/114.114.114.114
