--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71871,6 +71871,7 @@ server=/shbqmp.com/114.114.114.114
 server=/shbxzp.com/114.114.114.114
 server=/shbyer.com/114.114.114.114
 server=/shc1126.com/114.114.114.114
+server=/shcancer.com/114.114.114.114
 server=/shcas.net/114.114.114.114
 server=/shcc-horizon.com/114.114.114.114
 server=/shccig.com/114.114.114.114
