--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39752,6 +39752,7 @@ server=/heshecasa.com/114.114.114.114
 server=/heshui.com/114.114.114.114
 server=/heshuyun.com/114.114.114.114
 server=/hesiyivr.com/114.114.114.114
+server=/heskf.com/114.114.114.114
 server=/heson10.com/114.114.114.114
 server=/hesongwang.com/114.114.114.114
 server=/hesppe.com/114.114.114.114
