--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98826,6 +98826,7 @@ server=/zxlib.com/114.114.114.114
 server=/zxmall.com/114.114.114.114
 server=/zxmn2018.com/114.114.114.114
 server=/zxmseed.com/114.114.114.114
+server=/zxneweye.com/114.114.114.114
 server=/zxnic.net/114.114.114.114
 server=/zxnrh.com/114.114.114.114
 server=/zxoid.com/114.114.114.114
