--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65498,6 +65498,7 @@ server=/proya-group.com/114.114.114.114
 server=/proya.com/114.114.114.114
 server=/proyy.com/114.114.114.114
 server=/prpracg.com/114.114.114.114
+server=/prs-9hospital.com/114.114.114.114
 server=/prts.wiki/114.114.114.114
 server=/prttech.com/114.114.114.114
 server=/prxxff.com/114.114.114.114
