--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71896,6 +71896,7 @@ server=/shcstheatre.com/114.114.114.114
 server=/shcwmotor.com/114.114.114.114
 server=/shcz.com/114.114.114.114
 server=/shczssyq.com/114.114.114.114
+server=/shczyy.com/114.114.114.114
 server=/shdancecenter.com/114.114.114.114
 server=/shdcjt.com/114.114.114.114
 server=/shdirong.com/114.114.114.114
