--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73192,6 +73192,7 @@ server=/shyongwo.com/114.114.114.114
 server=/shyongzeng.com/114.114.114.114
 server=/shyouai.com/114.114.114.114
 server=/shyouth.net/114.114.114.114
+server=/shypzx.com/114.114.114.114
 server=/shyrcb.com/114.114.114.114
 server=/shysco.com/114.114.114.114
 server=/shyuanye.com/114.114.114.114
