--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68775,6 +68775,7 @@ server=/remotcon.mobi/114.114.114.114
 server=/remoteaps.com/114.114.114.114
 server=/remotedu.com/114.114.114.114
 server=/remyhumanhairextension.com/114.114.114.114
+server=/renaihospital.com/114.114.114.114
 server=/renaopai.com/114.114.114.114
 server=/renaren.com/114.114.114.114
 server=/renbenai.com/114.114.114.114
