accelerated-domains: add shcmer.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71889,6 +71889,7 @@ server=/shchyy.net/114.114.114.114
 server=/shclearing.com/114.114.114.114
 server=/shcljoy.com/114.114.114.114
 server=/shclkj.com/114.114.114.114
+server=/shcmer.com/114.114.114.114
 server=/shcmhr.com/114.114.114.114
 server=/shcngz.com/114.114.114.114
 server=/shcs2010.com/114.114.114.114
