accelerated-domains: add shenjiangyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72076,6 +72076,7 @@ server=/shenhudong.com/114.114.114.114
 server=/sheniaoren.com/114.114.114.114
 server=/sheniaorenw.com/114.114.114.114
 server=/shenjian.io/114.114.114.114
+server=/shenjiangyy.com/114.114.114.114
 server=/shenjiballs.com/114.114.114.114
 server=/shenjing.com/114.114.114.114
 server=/shenjumiaosuan.com/114.114.114.114
