--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56478,6 +56478,7 @@ server=/lzznbyq.com/114.114.114.114
 server=/lzzrgas.com/114.114.114.114
 server=/lzzy.net/114.114.114.114
 server=/lzzyy.com/114.114.114.114
+server=/m-edu.com/114.114.114.114
 server=/m-finder.com/114.114.114.114
 server=/m-rainbow.com/114.114.114.114
 server=/m.biz/114.114.114.114
