accelerated-domains: add shssdc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72808,6 +72808,7 @@ server=/shsot.com/114.114.114.114
 server=/shspdq.com/114.114.114.114
 server=/shspt.com/114.114.114.114
 server=/shssac.com/114.114.114.114
+server=/shssdc.com/114.114.114.114
 server=/shssp.org/114.114.114.114
 server=/shsxjy.com/114.114.114.114
 server=/shsyf.com/114.114.114.114
