accelerated-domains: add shanghaivet.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71639,6 +71639,7 @@ server=/shanghaishuangyanpi.com/114.114.114.114
 server=/shanghaitianqi114.com/114.114.114.114
 server=/shanghaitower.com/114.114.114.114
 server=/shanghaivast.com/114.114.114.114
+server=/shanghaivet.com/114.114.114.114
 server=/shanghaiwater.com/114.114.114.114
 server=/shanghaixianhuadian.com/114.114.114.114
 server=/shanghaixs.com/114.114.114.114
