accelerated-domains: add shdyiy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71919,6 +71919,7 @@ server=/shdunjiusy.com/114.114.114.114
 server=/shdwdz.com/114.114.114.114
 server=/shdxgraphene.com/114.114.114.114
 server=/shdy168.com/114.114.114.114
+server=/shdyiy.com/114.114.114.114
 server=/shdyty.com/114.114.114.114
 server=/shdzfp.com/114.114.114.114
 server=/sheasyoffice.com/114.114.114.114
