accelerated-domains: add star-kid.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75114,6 +75114,7 @@ server=/standatrans.com/114.114.114.114
 server=/standteam.net/114.114.114.114
 server=/stanlyview.com/114.114.114.114
 server=/staofchina.com/114.114.114.114
+server=/star-kid.com/114.114.114.114
 server=/star-new-material.com/114.114.114.114
 server=/star1024.com/114.114.114.114
 server=/star365.com/114.114.114.114
