accelerated-domains: add shanghaijiuyuanguahao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71624,6 +71624,7 @@ server=/shanghaihuanli.com/114.114.114.114
 server=/shanghaiinvest.com/114.114.114.114
 server=/shanghaiiot.org/114.114.114.114
 server=/shanghaijinyimaoyi.com/114.114.114.114
+server=/shanghaijiuyuanguahao.com/114.114.114.114
 server=/shanghaik11.com/114.114.114.114
 server=/shanghaimart.com/114.114.114.114
 server=/shanghaimetal.com/114.114.114.114
