accelerated-domains: add kpdhk.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51616,6 +51616,7 @@ server=/kox.moe/114.114.114.114
 server=/koyuki.cc/114.114.114.114
 server=/kpanda.wiki/114.114.114.114
 server=/kpblw.com/114.114.114.114
+server=/kpdhk.com/114.114.114.114
 server=/kpfqg.com/114.114.114.114
 server=/kpjushi.com/114.114.114.114
 server=/kpkpw.com/114.114.114.114
