accelerated-domains: add xn--xhqs8jp0kpz2d.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89374,6 +89374,7 @@ server=/xn--xhq9mt12cf5v.ink/114.114.114.114
 server=/xn--xhq9mt12cf5v.ren/114.114.114.114
 server=/xn--xhqq2hhv0dkpk.com/114.114.114.114
 server=/xn--xhqq4f5vc69qlmk6mva633mwoeiuad9562e.com/114.114.114.114
+server=/xn--xhqs8jp0kpz2d.net/114.114.114.114
 server=/xn--xhqx10kr8o.com/114.114.114.114
 server=/xn--xkr999cp4fv97a.com/114.114.114.114
 server=/xn--xkrs9ba41r.com/114.114.114.114
