accelerated-domains: add shhqyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72250,6 +72250,7 @@ server=/shhksports.com/114.114.114.114
 server=/shhl56.com/114.114.114.114
 server=/shhmbio.com/114.114.114.114
 server=/shhorse.com/114.114.114.114
+server=/shhqyy.com/114.114.114.114
 server=/shhs-tw.com/114.114.114.114
 server=/shhuaerkang.com/114.114.114.114
 server=/shhuayi.com/114.114.114.114
