accelerated-domains: add nanhaisw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60385,6 +60385,7 @@ server=/nangualin.com/114.114.114.114
 server=/nanguowl.com/114.114.114.114
 server=/nangxia.com/114.114.114.114
 server=/nanhaicorp.com/114.114.114.114
+server=/nanhaisw.com/114.114.114.114
 server=/nanhaitoday.com/114.114.114.114
 server=/nanhe111.com/114.114.114.114
 server=/nanhua.net/114.114.114.114
