accelerated-domains: add ynwater.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92868,6 +92868,7 @@ server=/ynszfw.com/114.114.114.114
 server=/yntcbc.com/114.114.114.114
 server=/ynurl.com/114.114.114.114
 server=/ynw360.com/114.114.114.114
+server=/ynwater.com/114.114.114.114
 server=/ynwin.com/114.114.114.114
 server=/ynx111.com/114.114.114.114
 server=/ynxcbc.com/114.114.114.114
