accelerated-domains: add kmwatersupply.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51432,6 +51432,7 @@ server=/kmtxzs.com/114.114.114.114
 server=/kmvideo.cc/114.114.114.114
 server=/kmw.cc/114.114.114.114
 server=/kmw.com/114.114.114.114
+server=/kmwatersupply.com/114.114.114.114
 server=/kmway.com/114.114.114.114
 server=/kmwx.net/114.114.114.114
 server=/kmxg.net/114.114.114.114
