accelerated-domains: add xhwater.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87158,6 +87158,7 @@ server=/xhtzgg.com/114.114.114.114
 server=/xhu2.com/114.114.114.114
 server=/xhu218.com/114.114.114.114
 server=/xhup.club/114.114.114.114
+server=/xhwater.com/114.114.114.114
 server=/xhwhouse.com/114.114.114.114
 server=/xhwsjc.com/114.114.114.114
 server=/xhwtech.com/114.114.114.114
