accelerated-domains: add wuzhongwater.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86076,6 +86076,7 @@ server=/wuzhenwucun.com/114.114.114.114
 server=/wuzhicms.com/114.114.114.114
 server=/wuzhiq.com/114.114.114.114
 server=/wuzhiwei.net/114.114.114.114
+server=/wuzhongwater.com/114.114.114.114
 server=/wuzhoucj.com/114.114.114.114
 server=/wuzhoudonghui.com/114.114.114.114
 server=/wuzhouqianzheng.com/114.114.114.114
