accelerated-domains: add tz-water.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80511,6 +80511,7 @@ server=/tyzhjx.com/114.114.114.114
 server=/tyzhyun.com/114.114.114.114
 server=/tyztwhyy.com/114.114.114.114
 server=/tz-dsp.com/114.114.114.114
+server=/tz-water.com/114.114.114.114
 server=/tz.app/114.114.114.114
 server=/tz100.com/114.114.114.114
 server=/tz121.com/114.114.114.114
