accelerated-domains: add waterenping.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83299,6 +83299,7 @@ server=/watchwxfw.com/114.114.114.114
 server=/watchzb.com/114.114.114.114
 server=/water520.com/114.114.114.114
 server=/waterdropfilter.com/114.114.114.114
+server=/waterenping.com/114.114.114.114
 server=/waterfallguilin.com/114.114.114.114
 server=/watergasheat.com/114.114.114.114
 server=/waterlytech.com/114.114.114.114
