accelerated-domains: add watergdd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83302,6 +83302,7 @@ server=/waterdropfilter.com/114.114.114.114
 server=/waterenping.com/114.114.114.114
 server=/waterfallguilin.com/114.114.114.114
 server=/watergasheat.com/114.114.114.114
+server=/watergdd.com/114.114.114.114
 server=/waterlytech.com/114.114.114.114
 server=/watertek.com/114.114.114.114
 server=/watertu.com/114.114.114.114
