accelerated-domains: add hhojs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40052,6 +40052,7 @@ server=/hhmage.com/114.114.114.114
 server=/hhmajiang.com/114.114.114.114
 server=/hhnynews.com/114.114.114.114
 server=/hho-hawater.com/114.114.114.114
+server=/hhojs.com/114.114.114.114
 server=/hhpcbs.com/114.114.114.114
 server=/hhpj.net/114.114.114.114
 server=/hhpmzp.com/114.114.114.114
