accelerated-domains: add linfenwater.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54179,6 +54179,7 @@ server=/linfan.com/114.114.114.114
 server=/linfeicloud.com/114.114.114.114
 server=/linfeng.tech/114.114.114.114
 server=/linfenshenzhou.com/114.114.114.114
+server=/linfenwater.net/114.114.114.114
 server=/ling-shi.com/114.114.114.114
 server=/lingaoren.com/114.114.114.114
 server=/lingb.net/114.114.114.114
