accelerated-domains: add sjzjifeng.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73818,6 +73818,7 @@ server=/sjzhijia100.com/114.114.114.114
 server=/sjzhu.com/114.114.114.114
 server=/sjzhushou.com/114.114.114.114
 server=/sjzhxhg.com/114.114.114.114
+server=/sjzjifeng.com/114.114.114.114
 server=/sjzjinliulin.com/114.114.114.114
 server=/sjzjkqgs.com/114.114.114.114
 server=/sjzkz.com/114.114.114.114
