accelerated-domains: add szbaike.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76450,6 +76450,7 @@ server=/szaudio.net/114.114.114.114
 server=/szaupd.com/114.114.114.114
 server=/szautism.com/114.114.114.114
 server=/szbaicao.com/114.114.114.114
+server=/szbaike.com/114.114.114.114
 server=/szbaleng.com/114.114.114.114
 server=/szbaoly.com/114.114.114.114
 server=/szbaoming.com/114.114.114.114
