accelerated-domains: add kuaiqikan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51935,6 +51935,7 @@ server=/kuaipao8.com/114.114.114.114
 server=/kuaipianer.com/114.114.114.114
 server=/kuaipiyun.com/114.114.114.114
 server=/kuaipng.com/114.114.114.114
+server=/kuaiqikan.com/114.114.114.114
 server=/kuaiqin.com/114.114.114.114
 server=/kuairen88.com/114.114.114.114
 server=/kuaishangkf.com/114.114.114.114
