accelerated-domains: add pdswater.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64289,6 +64289,7 @@ server=/pdsgjj.com/114.114.114.114
 server=/pdsjycm.com/114.114.114.114
 server=/pdskgb.com/114.114.114.114
 server=/pdss.xyz/114.114.114.114
+server=/pdswater.com/114.114.114.114
 server=/pdsxww.com/114.114.114.114
 server=/pdszhtl.com/114.114.114.114
 server=/pdty123.com/114.114.114.114
