accelerated-domains: add data86.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24270,6 +24270,7 @@ server=/dat881.com/114.114.114.114
 server=/data380.com/114.114.114.114
 server=/data4h.com/114.114.114.114
 server=/data5u.com/114.114.114.114
+server=/data86.com/114.114.114.114
 server=/data985.com/114.114.114.114
 server=/datacaciques.com/114.114.114.114
 server=/datacanvas.com/114.114.114.114
