accelerated-domains: add hejxf.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39548,6 +39548,7 @@ server=/hejizhan.com/114.114.114.114
 server=/hejugroup.com/114.114.114.114
 server=/hejujk.com/114.114.114.114
 server=/hejun.com/114.114.114.114
+server=/hejxf.com/114.114.114.114
 server=/heketai.com/114.114.114.114
 server=/hekouxin.com/114.114.114.114
 server=/heku.org/114.114.114.114
