accelerated-domains: add sd-guotai.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70725,6 +70725,7 @@ server=/sd-chengdasteel.com/114.114.114.114
 server=/sd-eh.com/114.114.114.114
 server=/sd-ex.com/114.114.114.114
 server=/sd-fjzy.com/114.114.114.114
+server=/sd-guotai.com/114.114.114.114
 server=/sd-kb.com/114.114.114.114
 server=/sd-nand.com/114.114.114.114
 server=/sd-rtn.com/114.114.114.114
