accelerated-domains: add mqikan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59446,6 +59446,7 @@ server=/mqant.com/114.114.114.114
 server=/mqc168.com/114.114.114.114
 server=/mqcoffee.com/114.114.114.114
 server=/mqguitar.com/114.114.114.114
+server=/mqikan.com/114.114.114.114
 server=/mqmgroup.com/114.114.114.114
 server=/mqqurl.com/114.114.114.114
 server=/mqsyr.com/114.114.114.114
